Fixed bug 11174 and PMD violations.
SVN-Revision: 17578